updated technologies and fixed width bug for them on mobile

--- a/src/style/sections/_about.scss
+++ b/src/style/sections/_about.scss
@@ -53,16 +53,8 @@
 			flex-direction: column;
 			align-items: flex-start;
 
-			@include respond(phone) {
-				align-items: center;
-			}
-
 			@include respond(tab-port) {
 				height: 87%;
-			}
-
-			@media screen and (max-width: 767px) {
-				align-items: center;
 			}
 
 			&--text {
@@ -70,16 +62,10 @@
 
 				@include respond(tab-port) {
 					font-size: 1.5rem;
-					text-align: left;
 				}
 
 				@include respond(phone) {
 					font-size: 1.6rem;
-					text-align: center;
-				}
-
-				@media screen and (max-width: 767px) {
-					text-align: center;
 				}
 
 				&--important {
@@ -102,9 +88,10 @@
 
 			&--techologies {
 				display: grid;
-				grid-template-columns: repeat(2, 1fr);
+				grid-template-columns: repeat(2, minmax(14.2rem, 1fr));
 				column-gap: 8rem;
 				row-gap: 0.5rem;
+				text-align: left;
 				justify-items: start;
 				align-items: center;
 				margin-bottom: 1rem;
